--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
   </div>
   <div class="corner">tilludvig &copy; 2025</div>
 
-  <!-- 8-bit Chiptune (replace with any fun tune if preferred) -->
-<!-- Working 8-bit loop with no CORS issues -->
-<audio id="chiptune" autoplay loop>
-  <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_b6bfa8c48b.mp3" type="audio/mpeg">
+  <!-- Play local audio file once on page load -->
+<audio id="chiptune" autoplay>
+  <source src="audio/Du er størst av barna,.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
   <script>
