--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
     body {
-      background: radial-gradient(ellipse at center, #111 0%, #222 100%);
-      height: 100vh;
+      background: linear-gradient(135deg, #ffb6c1 0%, #00ffd9 100%);
+      min-height: 100vh;
       margin: 0;
       display: flex;
       justify-content: center;
@@ -18,22 +18,39 @@
       font-family: 'Press Start 2P', monospace;
       color: #00FFCC;
       overflow: hidden;
+      position: relative;
+    }
+    .pixel-bg {
+      position: fixed;
+      top: 0; left: 0; width: 100vw; height: 100vh;
+      z-index: 0;
+      pointer-events: none;
+      opacity: 0.18;
+      background-image: repeating-linear-gradient(90deg, #fff 0 2px, transparent 2px 32px),
+        repeating-linear-gradient(180deg, #fff 0 2px, transparent 2px 32px);
     }
 
     .container {
-      background: rgba(0, 0, 0, 0.9);
-      padding: 2em 3em;
-      border-radius: 20px;
-      border: 3px dashed #00FFFF;
-      box-shadow: 0 0 40px #00FFD933, inset 0 0 20px #00FFD9;
+      position: relative;
+      z-index: 1;
+      background: rgba(0, 0, 0, 0.92);
+      padding: 2.5em 3.5em 2em 3.5em;
+      border-radius: 0;
+      border: 8px solid #fff600;
+      box-shadow: 0 0 0 8px #00ffd9, 0 0 40px #ffb6c1, 0 0 0 16px #222;
+      outline: 4px solid #ff00cc;
+      outline-offset: 8px;
       animation: pulse 3s infinite;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     h1 {
-      font-size: 1.5em;
+      font-size: 2em;
       text-align: center;
-      margin: 0;
-      text-shadow: 0 0 6px #00ffcc, 0 0 12px #00ffaa, 0 0 24px #007777;
+      margin: 0 0 1.5em 0;
+      text-shadow: 0 0 6px #00ffcc, 0 0 12px #00ffaa, 0 0 24px #ff00cc, 2px 2px 0 #fff600;
       animation: flicker 2s infinite alternate;
     }
 
@@ -48,14 +65,12 @@
       50% { box-shadow: 0 0 40px #00FFD999, inset 0 0 20px #00FFD9; }
     }
 
-    .corner {
-      position: absolute;
-      bottom: 10px;
-      right: 20px;
-      font-size: 0.75em;
-      color: #7fffd4b0;
-      opacity: 0.4;
-      font-family: monospace;
+    #buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1em;
+      margin-top: 1.5em;
     }
 
     button {
@@ -84,47 +99,56 @@
     .song-btn {
       font-family: 'Press Start 2P', monospace;
       font-size: 1em;
-      background: linear-gradient(90deg, #00FFD9 0%, #00FFCC 100%);
+      background: linear-gradient(90deg, #fff600 0%, #ffb6c1 100%);
       color: #222;
-      border: 3px solid #00FFCC;
-      border-radius: 8px;
-      box-shadow: 0 0 8px #00FFD9, 0 0 2px #00FFCC inset;
-      margin: 0.5em 0.5em 0 0;
-      padding: 0.7em 1.5em;
+      border: 4px solid #00ffd9;
+      border-radius: 0;
+      box-shadow: 4px 4px 0 #222, 0 0 16px #ff00cc;
+      margin: 0;
+      padding: 1.2em 2.2em;
       cursor: pointer;
-      text-shadow: 1px 1px 0 #fff, 2px 2px 0 #00FFD9;
-      transition: background 0.2s, transform 0.1s;
-      outline: none;
+      text-shadow: 2px 2px 0 #fff, 3px 3px 0 #00FFD9;
+      transition: background 0.2s, transform 0.1s, box-shadow 0.2s;
+      outline: 2px solid #fff;
+      outline-offset: -6px;
       position: relative;
       overflow: hidden;
       animation: btn-flicker 2s infinite alternate;
+      min-width: 180px;
     }
     .song-btn:active {
       background: #00FFCC;
       color: #111;
       transform: scale(0.97);
-      box-shadow: 0 0 2px #00FFD9;
+      box-shadow: 2px 2px 0 #222;
     }
-    @keyframes btn-flicker {
-      0% { filter: brightness(1.1); }
-      50% { filter: brightness(0.8) hue-rotate(10deg); }
-      100% { filter: brightness(1.2) hue-rotate(-10deg); }
-    }
-    /* Fun: Each button gets a different border color for 8bit chaos */
-    .song-btn:nth-child(1) { border-color: #FF00CC; box-shadow: 0 0 8px #FF00CC; }
-    .song-btn:nth-child(2) { border-color: #00FFCC; box-shadow: 0 0 8px #00FFCC; }
-    .song-btn:nth-child(3) { border-color: #FFFF00; box-shadow: 0 0 8px #FFFF00; }
-    .song-btn:nth-child(4) { border-color: #FF6600; box-shadow: 0 0 8px #FF6600; }
+    .song-btn:nth-child(1) { border-color: #FF00CC; box-shadow: 4px 4px 0 #222, 0 0 16px #FF00CC; background: linear-gradient(90deg, #fff600 0%, #FF00CC 100%); }
+    .song-btn:nth-child(2) { border-color: #00FFCC; box-shadow: 4px 4px 0 #222, 0 0 16px #00FFCC; background: linear-gradient(90deg, #fff600 0%, #00FFCC 100%); }
+    .song-btn:nth-child(3) { border-color: #FFFF00; box-shadow: 4px 4px 0 #222, 0 0 16px #FFFF00; background: linear-gradient(90deg, #fff600 0%, #FFFF00 100%); }
+    .song-btn:nth-child(4) { border-color: #00ffd9; box-shadow: 4px 4px 0 #222, 0 0 16px #00ffd9; background: linear-gradient(90deg, #fff600 0%, #00ffd9 100%); }
     .song-btn:hover {
-      background: #fff600;
-      color: #222;
+      background: #ffb6c1;
+      color: #fff600;
       filter: contrast(1.5) brightness(1.2);
       text-shadow: 2px 2px 0 #fff, 3px 3px 0 #00FFD9;
-      box-shadow: 0 0 16px #fff600, 0 0 8px #00FFD9;
+      box-shadow: 0 0 32px #fff600, 0 0 16px #00FFD9, 6px 6px 0 #222;
+      outline: 3px solid #ff00cc;
+    }
+
+    .corner {
+      position: absolute;
+      bottom: 10px;
+      right: 20px;
+      font-size: 0.75em;
+      color: #7fffd4b0;
+      opacity: 0.4;
+      font-family: monospace;
+      z-index: 2;
     }
   </style>
 </head>
 <body>
+  <div class="pixel-bg"></div>
   <div class="container">
     <h1>Grattis med Konfirmasjon!</h1>
     <div id="buttons"></div>
