--- a/index.html
+++ b/index.html
@@ -151,13 +151,18 @@
     #nintendo-dude-wrapper {
       position: fixed;
       left: 0;
-      bottom: 18px;
+      bottom: 8vw;
       width: 120px;
       height: 240px;
-      z-index: 10;
+      z-index: 9999;
       pointer-events: none;
       animation: walk-dude 8s linear infinite alternate;
       transition: bottom 0.2s cubic-bezier(.7,-0.5,.7,1.5);
+    }
+    @media (max-width: 600px) {
+      #nintendo-dude-wrapper {
+        bottom: 18vw;
+      }
     }
     .jumping {
       transition: bottom 0.18s cubic-bezier(.7,-0.5,.7,1.5);
@@ -172,6 +177,7 @@
       height: 240px;
       image-rendering: pixelated;
       display: block;
+      z-index: 9999;
     }
     @keyframes walk-dude {
       0% { left: 0; }
