added more stuff

--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
     const songs = [
       "Bål.mp3",      
       "Vennebyen.mp3",
-      "green.mp3"
+      "green.mp3",
+      "Bassdrop.mp3"
     ];
     const buttonsDiv = document.getElementById('buttons');
     songs.forEach((song, i) => {
